[package]
name = "highlander"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5.2", features = ["auto-send", "macros"] }
#rtdlib = { version = "0.7.2", features = ["sys"] }
rtdlib = { features = ["sys"], path = "../rtdlib" }
base64 = "0.13.0"

serde_json = "1.0.59"
log = "0.4.8"
pretty_env_logger = "0.4.0"
derive_more = "0.99.16"

tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.3"
futures = "0.3.16"
chrono = "0.4"

sqlite = "0.24.0"
lazy_static = "1.4.0"
mut_static = "5.0.0"
regex = "1.5.4"

rocksdb = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
itertools = "0.10.0"

reverse_geocoder = "2.0.1"
